@@ -1120,6 +1120,18 @@ const run = (): void => {
 
   {
     const tmp = mkTmp();
+    const ociDir = path.join(tmp, "oci_layout_missing_blobs");
+    fs.mkdirSync(ociDir, { recursive: true });
+    fs.writeFileSync(path.join(ociDir, "oci-layout"), "{\"imageLayoutVersion\":\"1.0.0\"}\n", "utf8");
+    fs.writeFileSync(path.join(ociDir, "index.json"), JSON.stringify({ schemaVersion: 2, manifests: [{ mediaType: "x" }] }), "utf8");
+    const capture = captureTreeV0(ociDir, limits);
+    const res = runArtifactAdapterV1({ selection: "container", enabledPlugins: [], inputPath: ociDir, capture });
+    assert(!res.ok, "container adapter should fail closed for explicit OCI layout with manifests but missing blobs");
+    assertEq(res.failCode, "CONTAINER_LAYOUT_INVALID", "expected CONTAINER_LAYOUT_INVALID for OCI layout missing blobs");
+  }
+
+  {
+    const tmp = mkTmp();
     const tarPath = path.join(tmp, "container.tar");
     writeSimpleTar(tarPath, [
       { name: "manifest.json", text: "[]" },
